* Wed Jan 13 2021 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 9.0.0-0
- Add EL8 support
  - add dconf settings to dconf hash to ensure users can not disable
    lock screen or show passwords in plain text
  - update package lists.  Common package list is now packages common to
    gnome V3.
- Remove support for EL6
  - removed support for gnome2
  - removed the gconf parameters and settings.
  - removed test logic
  - removed parameter gnome::gconf_hash
  - removed parameter gnome::enable_gnome

* Thu Jul 23 2020 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 8.1.2-0
- update the upper bound of simplib for SIMP 6.5 release

* Thu Aug 15 2019 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.1.1-0
- Fix compliance engine tests

* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 8.1.0-0
- Add v2 compliance_markup data

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 8.0.1-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 8.0.0-0
- Update Hiera 4 to Hiera 5

* Fri May 18 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 8.0.0-0
- Removed all GDM and Dconf settings - BREAKING
  - Dconf has been moved to its own module
- Ensure that all settings are 100% GNOME specific
- Fixed a typo in the `dconf_hash` where `automount-never` was specified
  instead of `autorun-never`
- Add support for OEL and Puppet 5


* Wed Sep 20 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 7.0.1-0
- Add libxkbcommon-x11 to required package list for CentOS/RedHat 7.4.
- Remove unnecessary CentOS data-in-module files.  The OS family fact
  for CentOS is RedHat, so these files are not used.

* Mon Jun 05 2017 Nick Miller <nick.miller@onyxpoint.com> - 7.0.0-0
- module was rewritten
  - takes advantage of the data in modules paradigm
  - has a single point of entry
- packages now default to 'installed' or the package_ensure catalyst
  from simp_options
- gnome::dconf::add