@@ -1,3 +1,7 @@
+* Tue Jun 15 2021 Chris Tessmer <chris.tessmer@onyxpoint.com> - 9.1.0
+- Removed support for Puppet 5
+- Ensured support for Puppet 7 in requirements and stdlib
+
 * Wed Jan 13 2021 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 9.0.0-0
 - Add EL8 support
   - add dconf settings to dconf hash to ensure users can not disable
